--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,12 +27,13 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "esbuild": "^0.27.3",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "jsdom": "^26.0.0",
-    "vite": "^6.2.0",
+    "vite": "^7.3.1",
     "vitest": "^3.0.7"
   }
 }
